update solver when window size changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Chris Tolliday <ctolliday@gmail.com>"]
 backend = { path = "backend" }
 piston2d-graphics = "0.19"
 cassowary = "0.2.0"
+pistoncore-input = "0.15.0"
 
 [replace]
 "cassowary:0.2.0" = { path = "../cassowary-rs" }
