--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ piston2d-graphics = "0.19"
 cassowary = "0.2.0"
 pistoncore-input = "0.15.0"
 pistoncore-window = "0.24.0"
+petgraph = "0.4.1"
 
 [replace]
 "cassowary:0.2.0" = { path = "../cassowary-rs" }
