replace event bus with just looking up listeners in the widget graph, for now. made widget members boxed instead of borrowed references

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cassowary = "0.2.0"
 pistoncore-input = "0.15.0"
 pistoncore-window = "0.24.0"
 petgraph = "0.4.1"
+matches = "0.1.4"
 
 [replace]
 "cassowary:0.2.0" = { path = "../cassowary-rs" }
