--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,3 +17,5 @@ piston2d-gfx_graphics = "0.33.1"
 piston-texture = "0.5.0"
 shader_version = "0.2.0"
 pistoncore-glutin_window = "0.33.0"
+
+rusttype = "0.2.0"
