retooled font map into a generic map for resources, add resource map for images as well as fonts, and implement a basic image widget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ petgraph = "0.4.1"
 matches = "0.1.4"
 rusttype = "0.2.0"
 find_folder = "0.3.0"
+gfx_device_gl = "0.11.0"
+piston2d-gfx_graphics = "0.33.1"
 
 [replace]
 "cassowary:0.2.0" = { path = "../cassowary-rs" }
