--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rusttype = "0.2.0"
 find_folder = "0.3.0"
 gfx_device_gl = "0.11.0"
 piston2d-gfx_graphics = "0.33.1"
+glutin = "0.7.0"
 
 
 [dev-dependencies]
