moved Resources struct out of ui module, and into a static variable initialized with lazy-static, also made widget builders initialize widget ids from Resources on construction rather than needing to generate and set one.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rusttype = "0.2.0"
 gfx_device_gl = "0.11.0"
 piston2d-gfx_graphics = "0.33.1"
 glutin = "0.7.0"
+lazy_static = "0.2.2"
 
 [dev-dependencies]
 find_folder = "0.3.0"
