--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -2,6 +2,7 @@
 name = "backend"
 version = "0.1.0"
 authors = ["Chris Tolliday <ctolliday@gmail.com>"]
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 glium = "0.15.0"
