Now uses cassowary fetch changes to update widget bounds directly, no longer uses it as a signal to reach in and pull values out. Can now use mainline cassowary as a result

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 backend = { path = "backend" }
 text_layout = { path = "text_layout" }
-cassowary = { git = "https://github.com/christolliday/cassowary-rs", branch = "debug" }
 petgraph = { git = "https://github.com/bluss/petgraph", rev = "f58200a" }
+
+cassowary = "0.2.0"
 
 rusttype = "0.2.1"
 piston2d-graphics = "0.21"
