--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 backend = { path = "backend" }
 text_layout = { path = "text_layout" }
+cassowary = { git = "https://github.com/christolliday/cassowary-rs", rev = "bcfaf0e0f767a7c75aa8987e64783a8f57bde6ce" }
 
 petgraph = "0.4.3"
-cassowary = "0.2.1"
 
 rusttype = "0.2.1"
 piston2d-graphics = "0.21"
