--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ glutin = "0.7.0"
 
 lazy_static = "0.2.2"
 linked-hash-map = "0.3.0"
+stable_bst = "0.2.0"
 maplit = "0.1.4"
 downcast-rs = "1.0.0"
 
