--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ linked-hash-map = "0.3.0"
 stable_bst = "0.2.0"
 maplit = "0.1.4"
 downcast-rs = "1.0.0"
+multi_mut = "0.1.3"
 
 [dev-dependencies]
 find_folder = "0.3.0"
