add set_contents method to list, enables specifying list data and a method to transform it into a list item

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ multi_mut = "0.1.3"
 find_folder = "0.3.0"
 chrono = "0.2.25"
 env_logger = "0.3"
+lipsum = "0.3"
+rand = "0.3"
 
 [features]
 nightly = []
