Fix ci only testing layout

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,5 +12,6 @@ install:
 build: false
 
 test_script:
-  - cd layout && cargo test --verbose
+  - cargo test --verbose
+  - cd layout
   - cargo test --verbose
