--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ maplit = "0.1.4"
 downcast-rs = "1.0.0"
 multi_mut = "0.1.3"
 
+font-loader = "0.4.2"
+
 [dev-dependencies]
 find_folder = "0.3.0"
 chrono = "0.4"
