--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ maplit = "0.1.4"
 downcast-rs = "1.0.0"
 multi_mut = "0.1.3"
 error-chain = "0.11.0"
+font-loader = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
 find_folder = "0.3.0"
@@ -34,3 +35,4 @@ rand = "0.3"
 
 [features]
 nightly = []
+font_loader = ["font-loader"]
