Make limn crate into workspace, can now use cargo test --all and cargo doc --all

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Chris Tolliday <ctolliday@gmail.com>"]
 license = "MIT OR Apache-2.0"
 
+[workspace]
+
 [dependencies]
 text_layout = { path = "text_layout" }
 limn-layout = { path = "layout" }
