--- a/text_layout/Cargo.toml
+++ b/text_layout/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "text_layout"
-version = "0.1.0"
-authors = ["Chris Tolliday <ctolliday@gmail.com>", "Conrod Developers"]
+name = "limn-text_layout"
+version = "0.0.1"
+authors = ["Conrod Developers", "Chris Tolliday <ctolliday@gmail.com>"]
+keywords = ["text", "layout"]
+categories = ["gui"]
+description = "Text layout for GUIs."
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/christolliday/limn.git"
+homepage = "https://github.com/christolliday/limn"
 
 [dependencies]
 rusttype = "0.2.1"
