--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ webrender = { git = "https://github.com/servo/webrender", rev = "ba51d8d5892d7ff
 stb_truetype = "0.2.1"
 app_units = "0.5"
 rusttype = "0.2.1"
-glutin = { git = "https://github.com/christolliday/glutin", branch = "fix_windows" }
+glutin = "0.10.0"
 image = "0.16"
 
 lazy_static = "0.2.2"
