--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,15 @@ os:
 
 script:
   - cargo test --all --verbose
+
+after_success:
+  - |
+      [ $TRAVIS_BRANCH = master ] &&
+      [ $TRAVIS_PULL_REQUEST = false ] &&
+      [ $TRAVIS_OS_NAME = "linux" ] &&
+      [ $TRAVIS_RUST_VERSION = "stable" ] &&
+      cargo doc --all --no-deps &&
+      echo '<meta http-equiv=refresh content=0;url=limn/index.html>' > target/doc/index.html &&
+      sudo pip install ghp-import &&
+      ghp-import -n target/doc &&
+      git push -fq https://${GH_TOKEN}@github.com/christolliday/limn.git gh-pages
