--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ maplit = "0.1.4"
 multi_mut = "0.1.3"
 font-loader = "0.5.0"
 failure = "0.1.1"
+mopa = "0.2.2"
 
 [dev-dependencies]
 find_folder = "0.3.0"
